--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.13.2"
+androidDocumentationPlugin = "2.1.0"
 kotlin = "2.3.10"
 coreKtx = "1.17.0"
 appcompat = "1.7.1"
@@ -11,6 +12,7 @@ okhttp = "5.3.2"
 
 
 [libraries]
+android-documentation-plugin = { group = "org.jetbrains.dokka", name = "android-documentation-plugin", version.ref = "androidDocumentationPlugin" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 moshi = { group = "com.squareup.moshi", name = "moshi", version.ref = "moshi" }
